--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
     font-family: Arial;
 }
 
+input {
+    border-color: rgb(125,125,125);
+    background-color: rgb(240,240,240);
+}
+
 input[type=text], input[type=number] {
     width: 200px;
     height: 30px;
@@ -11,18 +16,14 @@ input[type=text], input[type=number] {
     font-size: 18px;
     border-radius: 10px;
     border-style: solid;
-    border-color: rgb(125,125,125);
-    background-color: rgb(240,240,240);
     color: rgb(20,20,20);
     border-width: 2px;
 }
 
-input[type=checkbox]{
-    border-color: rgb(125,125,125);
-    background-color: rgb(240,240,240);
+input[type=checkbox]::before{
     border-width: 2px;
-    width: 20px;
-    height: 20px;
+    width: 50px !important;
+    height: 50px !important;
 }
 
 #first {
@@ -33,7 +34,7 @@ input[type=checkbox]{
     width: 150px;
 }
 
-#match {
+#match, #score {
     width:100px;
 }
 
@@ -59,13 +60,9 @@ input[type=checkbox]{
     background-color: rgb(15,15,15);
     color: rgb(235,235,235);
     border-width: 2px;
-}
+    }
 
-    input[type=checkbox]{
-        border-color: rgb(125,125,125);
-        background-color: rgb(240,240,240);
-        border-width: 2px;
-        width: 20px;
-        height: 20px;
+    input[type=checkbox]::before{
+        background-color: rgb(15,15,15) !important;
     }
 }
