--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@
     padding: 10px;
 }
 
+body {
+    background-color: #5b608c;
+}
+
 h1, h2, h3, h4, h5, h6, p {
     margin-left: 3px;
     margin-right: 3px;
+    color: white;
 }
