--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ h1, h2, h3, h4, h5, h6, p {
     margin-right: 3px;
 }
 
+label.checkbox{
+    border: 2px solid white;
+    border-radius: 2px;
+}
+
 @keyframes fade-in{
     from{opacity: 0%;}
     to{opacity: 100%;}
